# fast-tcp-vpn

./: .gitignore  Cargo.toml  SPEED_TEST.md  TODO.md  build.sh  client.toml  deploy_speed_test.sh  manage_speed_test.sh  speed_test_server.service  test_speed.sh  重构.md
.agent/rules/: GEMINI.md
.agent/workflows/: ask.md
.cursor/rules/: project-rules.md  project-rules.mdc
.windsurf/rules/: project-rules.md  rules.md
src/: client.rs  config.rs  lib.rs  main.rs  server.rs  tcp.rs  tun.rs
src/domain/: device.rs  mod.rs  stack.rs  tcp_listener.rs  tcp_stream.rs
src/domain/packet/: tcp.rs
src/infrastructure/: ip.rs  mod.rs  raw_socket.rs  tcp.rs
src/infrastructure/crypto/: chacha20.rs  error.rs  mod.rs  noop.rs  traits.rs
src/infrastructure/packet/: checksum.rs  error.rs  ip.rs  mod.rs  tcp.rs  transport.rs
src/infrastructure/socket/: error.rs  mock_socket.rs  mod.rs  raw_socket.rs  traits.rs
src/infrastructure/tun/: error.rs  linux_tun.rs  mock_tun.rs  mod.rs  traits.rs  windows_tun.rs
src/reliability/: deduplication.rs  mod.rs  rate_control.rs  receive_buffer.rs  redundancy.rs  send_window.rs
src/transport/: connection.rs  fragment.rs  mod.rs  sequence.rs  state.rs
src/tunnel/: encapsulation.rs  mod.rs  routing.rs  session.rs  tunnel.rs  virtual_ip.rs
tests/: cli_tests.rs  client_tests.rs  e2e_traffic_tests.rs  integration_test.rs  loopback_tests.rs  no_backoff_tests.rs  raw_socket.rs  server_tests.rs  stack_test.rs  tun_tests.rs
